# yosys

./: .gitmodules  Makefile
database/: CMakeLists.txt  Makefile.inc  baseobject.cpp  baseobject.h  database.h  database_util.cpp  database_util.h  design.cpp  design.h  designset.cpp  designset.h  instance.cpp  instance.h  instport.cpp  instport.h  library.cpp  library.h  module.cpp  module.h  net.cpp  net.h  port.cpp  port.h  yosysdb.cpp  yosysdb.h
kernel/: abcutil.h  rtlil_util.cc  rtlil_util.h
passes/cmds/: Makefile.inc  importdb.cc  map.cc  map.h  verify.cc  verify.h
